# sql-extractor

./: .pylintrc  LICENSE  README.md  extract-sql.py  extract_sql.py  factory.py  mypy.ini  pylintrc  pyproject.toml  requirements.txt  sql_extractor.py
.github/: dependabot.yml
.github/workflows/: lint_black.yml  lint_mypy.yml  lint_pylint.yml  release-please.yml  test.yml
cli/: command_handler.py  command_output.py
cli/commands/: base_command.py  base_formatter_command.py  print_create_table.py  print_insert.py  print_table_structure.py
connection/: database.py  sql_row.py
database/: Database.py  SqlRow.py  TSqlDatabase.py  sql_row.py  tsql_database.py
database/tsql/: helpers.py  object_fetchers.py
database/tsql/data_types/: __init__.py
database/tsql/objects/: __init__.py  principal.py
dialects/tsql/: connection_handler.py  formatter_handler.py  tsql_exception.py
dialects/tsql/connection/: helpers.py  tsql_database.py
dialects/tsql/fetcher/: internal_structure_fetcher.py  structure_fetcher.py  sys_object_fetcher.py  table_fetcher.py
fetcher/: database_structure.py  structure_fetcher.py  table_fetcher.py
fetcher/structure_objects/: column.py  column_type.py  database.py  schema.py  table.py
formatters/: base_formatter.py  table_html_formatter.py  table_md_formatter.py
tests/: helpers.py
tests/database/tsql/: test_helpers.py
tests/formatter/: test_table_html_formatter.py  test_table_md_formatter.py
tests/test_data/: local_server_name.txt  table_create_sql_tsql.txt  table_insert_sql_tsql.txt  table_structure_html.txt  table_structure_md.txt
(+19 files in other folders)
