[tool.poetry]
name = "sql-extractor"
version = "0.1.0"
description = ""
authors = ["Jani Ojanen <jajuojan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
ipython = "^8.4.0"
coverage = "^7.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
