[tool.poetry]
name = "sql-extractor"
version = "0.1.0"
description = ""
authors = ["Jani Ojanen <jajuojan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
mypy = "^0.991"
pylint = "^2.15.10"
ipython = "^8.8.0"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
