[tool.poetry]
name = "sql-extractor"
version = "0.1.0"
description = ""
authors = ["Jani Ojanen <jajuojan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyodbc = "^5.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.14"
pylint = "^3.2.7"
ipython = "^8.12.3"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
